<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_gazebo_wrapper</name>
  <version>1.0.0</version>
  <description>The hunav_gazebo_wrapper package</description>

  <maintainer email="noeperez@upo.es">Noé Pérez-Higueras</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/robotics-upo/hunav_gazebo_wrapper</url>

  <author>Noé Pérez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hunav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>tinyxml2_vendor</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>tinyxml2_vendor</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--<gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />-->
  </export>
</package>
